--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "ST558 Project I"
-author: "Mana Azizsoltani"
+title: "Covid 19 API Vignettes"
+author: "Jeremias A.Endrina Jr."
 date: "`r format(Sys.time(), '%d %B, %Y')`"
 output:
   github_document:
