--- a/index.Rmd
+++ b/index.Rmd
@@ -8,26 +8,13 @@ output:
     toc_depth: 1
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
-```
+# Required Packages
+In this project, we will use a number of amazing R packages:
 
-## R Markdown
+  * `knitr`: to generate pretty tables of date using the `kable()` function.  
+  * `tidyverse`: to manipulate data, generate plots (via `ggplot2`), and to use piping/chaining.  
+  * `rmarkdown`: to knit output files manually using the `render()` function.  
+  * `jsonlite`: to pull data from various endpoints of the Covid 19 APIs.
+  
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
-```
-
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
