First function done.

--- a/index.Rmd
+++ b/index.Rmd
@@ -14,5 +14,69 @@ In this project, we will use a number of amazing R packages:
   * `rmarkdown`: to knit output files manually using the `render()` function.  
   * `jsonlite`: to pull data from various endpoints of the Covid 19 APIs.
   
+```{r setup, include=FALSE, message=FALSE, warning=FALSE}
+# Load necessary packages
+library(knitr)
+library(tidyverse)
+library(rmarkdown)
+library(jsonlite)
+library(httr)
+```
+
+
+```{r}
+#get results of five countries to compare
+compareCountries <- function(country1, country2, country3=NULL, country4=NULL, country5=NULL){
+  covid <- GET("https://api.covid19api.com/summary")
+  covidDF <- fromJSON(rawToChar(covid$content))
+  data <- covidDF$Countries %>% as_tibble()
+  #checks if first country supplied is in the data, misspelled or lack quotation marks
+  if (country1 %in% data$Country){
+    output1 <- data %>% filter(data$Country == country1) %>% select(-c(ID,Slug, Premium))
+  }
+  else{
+    message <- paste("ERROR: First country supplied is not found. Check spelling or use quotation marks.")
+    stop(message)
+  }
+  #checks if second country supplied is in the data, misspelled or lack quotation marks
+  if (country2 %in% data$Country){
+    output2 <- data %>% filter(data$Country == country2) %>% select(-c(ID,Slug, Premium))
+  }
+  else{
+    message <- paste("ERROR: Second country supplied is not found. Check spelling or use quotation marks.")
+    stop(message)
+  }
+  #checks if third country supplied is in the data, misspelled or lack quotation marks
+  if (country3 %in% data$Country){
+  output3 <- data %>% filter(data$Country == country3) %>% select(-c(ID,Slug, Premium))
+  }
+  else{
+    message <- paste("ERROR: Third country supplied is not found. Check spelling or use quotation marks.")
+    stop(message)
+    }
+  #checks if fourth country supplied is in the data, misspelled or lack quotation marks  
+  if (country4 %in% data$Country){
+  output4 <- data %>% filter(data$Country == country4) %>% select(-c(ID,Slug, Premium))
+  }
+  else{
+    message <- paste("ERROR: Fourth country supplied is not found. Check spelling or use quotation marks.")
+    stop(message)
+  }
+  #checks if fifth country supplied is in the data, misspelled or lack quotation marks  
+  if (country5 %in% data$Country){
+  output5 <- data %>% filter(data$Country == country5) %>% select(-c(ID,Slug, Premium))
+  }
+  else{
+    message <- paste("ERROR: Fifth country supplied is not found. Check spelling or use quotation marks.")
+    stop(message)
+  }
+  output <- rbind(output1, output2, output3, output4, output5) %>% kable()
+  return(output)
+}
+
+#check function if it works
+compareCountries("Philippines","Indonesia", "Albania", "China", "Malaysia")
+
+```
 
 
