edit format...10/3 5:30pm

--- a/README.Rmd
+++ b/README.Rmd
@@ -3,13 +3,13 @@ date: "`r format(Sys.time(), '%d %B, %Y')`"
 output:
   github_document:
     toc: true
-    toc_depth: 1
+    toc_depth: 2
 ---
 
 This vignette aims to demonstrate how to access data from an API particularly the [Covid-19 API](https://covid19api.com). This will showcase different packages and functions to manipulate generated data set, apply exploratory analysis and present results using tables and plots. The vignette will focus on comparing Philippines' Covid-19 data to neighboring countries with similar land area, demographics and population.
 
 
-# Required Packages
+# I. Required Packages
 In this project, we will use a number of amazing R packages:
 
   * [`knitr`](https://bookdown.org/yihui/rmarkdown-cookbook/kable.html): to generate pretty tables of data using the `kable()` function.  
@@ -26,10 +26,11 @@ library(rmarkdown)
 library(jsonlite)
 ```
 
-# API Interaction Functions
+# II. API Interaction Functions
 In order to make our computer communicate with the Covid-19 API, we need to create different functions that will generate the data set or information that we want.
 
-## 1. `countyList()` - This function is important because this will generate a list of countries that have information about Covid-19. This will also generate a corresponding country slug name which will be used in the succeeding functions. No argument is needed to run this function.
+## 1. `countyList()`  
+This function is important because this will generate a list of countries that have information about Covid-19. This will also generate a corresponding country slug name which will be used in the succeeding functions. No argument is needed to run this function.
 ```{r 1}
 #create countryList function
 countryList <- function(){
@@ -44,7 +45,8 @@ countryList <- countryList()
 head(countryList)
 ```
 
-## 2. `countrySlugAbbrev()` - Accessing a data set of a specific country would need the use of the country's slug name as an argument of the function. This function specifically returns the corresponding slug name of the country being passed as an argument. An error message will appear if the name of the country is misspeled, first letter is not capitalized or if it can't be found in the data set.
+## 2. `countrySlugAbbrev()`  
+Accessing a data set of a specific country would need the use of the country's slug name as an argument of the function. This function specifically returns the corresponding slug name of the country being passed as an argument. An error message will appear if the name of the country is misspeled, first letter is not capitalized or if it can't be found in the data set.
 ```{r 2}
 #create the function
 countrySlugAbbrev <- function(inputCountry){
@@ -64,7 +66,8 @@ countrySlugAbbrev("United States of America")
 ```
 The results above suggest that if we want to access Covid-19 information about the United States of America, we will have to use the slug name "united-states". 
 
-## 3. `firstCase()` - This function will generate the day of the first confirmed case/s of Covid-19 of the country specified. The use of the country's slug name with quotation marks is important for the function to work. Use `countrySlugAbbrev()` function to generate the slug name of the country you want. An error message will show up if these conditions are not met.
+## 3. `firstCase()`  
+This function will generate the day of the first confirmed case/s of Covid-19 of the country specified. The use of the country's slug name with quotation marks is important for the function to work. Use `countrySlugAbbrev()` function to generate the slug name of the country you want. An error message will show up if these conditions are not met.  
 
 ```{r 3}
 #create function
@@ -87,7 +90,8 @@ firstCase("philippines")
 The results tell us that last 30th of January 2020, the Philippines recorded its first confirmed case of Covid-19.
 
 
-## 4. `casesCountryTime()` - This function will generate the cumulative number of confirmed cases of a particular country in a specific period of time. The user needs to pass 3 arguments such as country's slug name, start and end dates in 2021-09-01 format. All arguments need to be enclosed with quotation marks. The function has the capability to detect incorrect format, unknown argument and etc.
+## 4. `casesCountryTime()`  
+This function will generate the cumulative number of confirmed cases of a particular country in a specific period of time. The user needs to pass 3 arguments such as country's slug name, start and end dates in 2021-09-01 format. All arguments need to be enclosed with quotation marks. The function has the capability to detect incorrect format, unknown argument and etc.  
 
 ```{r 4}
 #create function
@@ -114,7 +118,8 @@ head(philSept)
 The results above show the cumulative confirmed cases of the Philippines for the month of September.
 
 
-## 5. `variableCountryTime()` - This function will access a specific type of information that we want to access. The user has to pass the country's slug name, start and end date and the type of data to generate such as cumulative confirmed cases or "Confirmed", cumulative new deaths or "Deaths", daily recovered patients or "Recovered", and number of active cases or "Active". Again, all arguments have to be enclosed with quotation marks. Similar to the previous functions, this function has the capability to detect incorrect format, unknown argument and etc.
+## 5. `variableCountryTime()`  
+This function will access a specific type of information that we want to access. The user has to pass the country's slug name, start and end date and the type of data to generate such as cumulative confirmed cases or "Confirmed", cumulative new deaths or "Deaths", daily recovered patients or "Recovered", and number of active cases or "Active". Again, all arguments have to be enclosed with quotation marks. Similar to the previous functions, this function has the capability to detect incorrect format, unknown argument and etc.  
 
 ```{r 5,warning=F, message=F}
 #create function
@@ -138,9 +143,10 @@ philSept <- variableCountryTime("philippines","2021-09-26", "2021-10-02", "Death
 #show generated data set
 philSept
 ```
-The results above show the cumulative number of deaths in the Philippines from Sept 26, 2021 to October 2, 2021.
+The results above show the cumulative number of deaths in the Philippines from Sept 26, 2021 to October 2, 2021.  
 
-## 6. `compareCountries()` - This function will generate the current date's Covid-19 information of five different countries. The user needs to supply the country names as arguments (first letter capitalized) and a summary of today's confirmed new cases, total confirmed cases, new deaths and total deaths will be generated. The function is capable of detecting incorrect format and if quotation marks are not used.
+## 6. `compareCountries()`  
+This function will generate the current date's Covid-19 information of five different countries. The user needs to supply the country names as arguments (first letter capitalized) and a summary of today's confirmed new cases, total confirmed cases, new deaths and total deaths will be generated. The function is capable of detecting incorrect format and if quotation marks are not used.  
 
 ```{r 6}
 #create function
@@ -168,9 +174,10 @@ compareCountries("Philippines","China", "Mexico", "United States of America", "C
 
 ```
 
-The results above show the latest information, in this case October 3, 2021, of five different countries. This information changes when Covid-19 API updates its database and the user re-runs the function.
+The results above show the latest information, in this case October 3, 2021, of five different countries. This information changes when Covid-19 API updates its database and the user re-runs the function.  
 
-## 7. `countryData()` - This function will generate all data (daily new cases, new deaths, active cases and recovered patients) of a particular country since the start of the pandemic. The user needs to supply the slug name of the country in quotes.
+## 7. `countryData()`  
+This function will generate all data (daily new cases, new deaths, active cases and recovered patients) of a particular country since the start of the pandemic. The user needs to supply the slug name of the country in quotes.  
 
 ```{r 7}
 #create function
@@ -194,9 +201,9 @@ covidUS <- countryData("united-states")
 tail(covidUS)
 ```
 
-# Data Manipulation
+# III. Data Manipulation  
 
-As mentioned above, this vignette focuses on comparing Covid-19 information of the Philippines to four other neighboring countries namely: Indonesia, Bangladesh, Vietnam and Thailand. To start, we will use the `contryData()` function to generate all Covid-19 information for each country, then we will manipulate the generated data set and combine all five of them to one big data set for exploration and analysis.
+As mentioned above, this vignette focuses on comparing Covid-19 information of the Philippines to four other neighboring countries namely: Indonesia, Bangladesh, Vietnam and Thailand. To start, we will use the `contryData()` function to generate all Covid-19 information for each country, then we will manipulate the generated data set and combine all five of them to one big data set for exploration and analysis.  
 
 ```{r}
 #use countryData() function to generate Covid-19 information for each country
@@ -207,8 +214,8 @@ covidViet <- countryData("vietnam")
 covidThai <- countryData("thailand")
 ```
 
-Now that we have the information for each country, let's manipulate the data set by selecting only the variables that we need and creating new variables that are necessary for our analysis. Since the free version of the API only provided cumulative number of confirmed cases and deaths, we can create two variables such as daily new cases and daily new deaths by subtracting two consecutive days. We can convert the string "Date" variable to a date type of object so that we can perform date operations. We can also separate the string "Date" variable to day, month and year which will come handy when we want to filter our data set. Since we will be doing these processes to all five of the data sets, it would be wise to create a one function and apply that function to each data set. After that, we are then ready to bind them together to create one big data set ready for analysis.
-```{r error=T}
+Now that we have the information for each country, let's manipulate the data set by selecting only the variables that we need and creating new variables that are necessary for our analysis. Since the free version of the API only provided cumulative number of confirmed cases and deaths, we can create two variables such as daily new cases and daily new deaths by subtracting two consecutive days. We can convert the string "Date" variable to a date type of object so that we can perform date operations. We can also separate the string "Date" variable to day, month and year which will come handy when we want to filter our data set. Since we will be doing these processes to all five of the data sets, it would be wise to create a one function and apply that function to each data set. After that, we are then ready to bind them together to create one big data set ready for analysis.  
+```{r error=T, warning=F, message=F}
 #create a function that will manipulate our data as stated above
 manipulateData <- function(dataset){
   dataset$Date <- as.Date(dataset$Date)
@@ -229,13 +236,14 @@ covidThai <- manipulateData(covidThai)
 
 #now we can put them all together in one data set for data exploration and analysis
 dataset <- bind_rows(covidBang, covidInd, covidPhil, covidThai, covidViet)
+dataset <- dataset %>% select(-c(message, success))
 #show first few rows of the big data set
 head(dataset)
 ```
 
-# Exploratory Data Analysis
+# IV. Exploratory Data Analysis
 
-## Contingency Tables
+## 1. Contingency Tables
 The first exploratory analysis that we will use is the contingency table. We can show through tables different counts of different variables in specific range of time. For consistency, we will use the three variables new cases, new deaths and active cases for our table. We will apply these variables to the Philippines' Covid information from the 24th to 30th of September.
 ```{r}
 #prepare new cases contingency table
@@ -260,7 +268,7 @@ kable(dataCont, caption="Philippines' 7-day Contingency Table of Active Cases")
 ```
 
 
-## Numerical Summaries
+## 2. Numerical Summaries
 The next exploratory analysis that we will do is the use of numerical summaries. These summaries will describe characteristics about a variable such as where the center is located or how spread the values are. We will use mean, median, standard deviation, 1st quantile, 3rd quantile, inter-quantile range and maximum to compare the Philippines' Covid information to other countries in terms of new cases, new deaths and active cases since the start to other countries since the start of the pandemic.
 
 ```{r}
@@ -290,8 +298,8 @@ kable(dataNumSum, caption="Numerical Summaries of Active Cases since the Start o
 ```
 Among the five countries, the Philippines consistently rank the second highest next to Indonesia in all numerical summaries and across all three variables.
 
-## Barplots
-For our barplots example, we will use the October 1, 2021 data of the five countries. The use of barplots help us show comparison between categories of data. In the example below, we will still use the three variables new cases, new deaths and active cases. 
+## 3. Bar plots
+For our bar plots example, we will use the October 1, 2021 data of the five countries. The use of bar plots help us show comparison between categories of data. In the example below, we will still use the three variables new cases, new deaths and active cases. 
 ```{r}
 #set how plots will be arranged in the output
 par(mfrow=c(1,3))
@@ -317,7 +325,7 @@ ggplot(dataBarPlot, aes(Country, Active)) + geom_col(fill="green", alpha=0.5) +
 It can be seen from the barplots above that last October 1, 2021, the Philippines consistently rank second for new cases and new deaths recorded on that day while it went one rank lower in terms of the number of active cases on that same day.
 
 
-## Histograms
+## 4. Histograms
 We will use histograms to summarize or provide a visual representation of the distribution of our data. We will use `facet_wrap()` to place histograms of the five countries in one plot. In the same manner, we will use the three variables new cases, new deaths and active cases for the month of September 2021.
 ```{r}
 #prepare dataset
@@ -341,7 +349,7 @@ ggplot(dataHist, aes(Active)) + geom_histogram(bins=20, color="black", fill="yel
 The daily cases histograms suggest that the Philippines' September data is skewed to the left which means there are a number of days in September where it records more Covid cases as compared to the other four countries. On the other hand, the new deaths histogram show that all five countries have similar distributions. Lastly, the active cases histograms are not very meaningful because some countries failed to submit their number of daily recoveries which aids in computing active cases per day.
 
 
-## Boxplots
+## 5. Boxplots
 We will use box plots to show visually the distribution of our three numerical data (new cases, new deaths and active cases) for the month of September 2021 by using our data's quantiles and averages. 
 ```{r}
 #prepare data set
@@ -365,7 +373,7 @@ ggplot(dataBoxPlot, aes(Country, Active)) + geom_boxplot(aes(colour=Country)) +
 The box plot on new Covid cases suggest that the the Philippines recorded the highest for the month of September. It recorded low new deaths for the same month but second in rank in terms of active cases. These box plots suggest further that there is significant difference in terms of the distributions of the data in each country.
 
 
-##Scatterplots with Line Graphs
+## 6. Scatterplots with Line Graphs
 
 In these plots, we will use only three countries for easy comparison of trends of data. We will use the 'Date' variable to easily plot trends since the start of the pandemic. We will overlay line graphs to to our scatter plots to help show trends of our data.
 
@@ -394,7 +402,7 @@ ggplot(dataScatter, aes(Date, Active)) + geom_jitter(aes(color=Country)) +
 The line graphs of new Covid cases suggest that since the start of the pandemic, the Philippines have experienced three waves of the spread of Covid-19. It has consistently ranked second, next to Indonesia, for both new cases and new deaths. The sudden jump of line graphs under active cases for August 2021 is due to the different countries' failure to submit reports on the number of daily recoveries thus loosing track of current active cases.
 
 
-# Summary
+# V. Summary
 Doing this project gave me mixed emotions. I enjoyed making this vignette because the idea of working on real-time data and sharing real-time analysis thrilled me. I find the whole process so cool and relevant especially during this pandemic. But at the same it made me sad knowing that my home country, the Philippines, is lagging behind in terms of its effort of controlling the spread of the virus and minimizing unnecessary loss of lives. On the brighter side, this project gives me hope that there are ways to improve our fight against this virus. One thing that the government can do is to look at, learn from and imitate our neighboring countries like Vietnam their strategies that work to mitigate the spread of the virus. The fight is not over yet as long as we are willing to learn from our mistakes and do our part.
 
 
